force-app/main/default/objects/outfunds__Review__c/outfunds__Review__c.object-meta.xml
<CustomObject>
    <description>Collects feedback from a reviewer.</description>
    <label>Review</label>
    <nameField>
        <label>Review Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>