force-app/main/default/objects/outfunds__Review__c/fields/outfunds__AssignedTo__c.field-meta.xml
<CustomField>
    <fullName>outfunds__AssignedTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the User who is performing the Review.</description>
    <inlineHelpText>Select who should review this Review record.</inlineHelpText>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>