force-app/main/default/objects/outfunds__Review__c/fields/outfunds__Comments__c.field-meta.xml
<CustomField>
    <fullName>outfunds__Comments__c</fullName>
    <description>Add notes about the Review of the Funding Request.</description>
    <label>Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>