force-app/main/default/objects/outfunds__Review__c/fields/outfunds__DueDate__c.field-meta.xml
<CustomField>
    <fullName>outfunds__DueDate__c</fullName>
    <description>The date the Review is due.</description>
    <inlineHelpText>The date the Review is due.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>