force-app/main/default/objects/outfunds__Review__c/fields/outfunds__FundingRequest__c.field-meta.xml
<CustomField>
    <fullName>outfunds__FundingRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The name of the Funding Request being reviewed.</description>
    <label>Funding Request</label>
    <referenceTo>outfunds__Funding_Request__c</referenceTo>
    <relationshipLabel>Reviews</relationshipLabel>
    <relationshipName>Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>