force-app/main/default/objects/outfunds__Review__c/fields/outfunds__SubmittedDate__c.field-meta.xml
<CustomField>
    <fullName>outfunds__SubmittedDate__c</fullName>
    <description>The date the Review was submitted.</description>
    <inlineHelpText>The date the Review was submitted.</inlineHelpText>
    <label>Submitted Date</label>
    <type>Date</type>
</CustomField>