force-app/main/default/objects/outfunds__Review__c/fields/sfdo_grants__ConfigurationJson__c.field-meta.xml
<CustomField>
    <fullName>sfdo_grants__ConfigurationJson__c</fullName>
    <label>Configuration JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>