force-app/main/default/objects/outfunds__Review__c/fields/sfdo_grants__DisplayEndDate__c.field-meta.xml
<CustomField>
    <fullName>sfdo_grants__DisplayEndDate__c</fullName>
    <description>The review stops being displayed to the reviewer at the end of this day.</description>
    <inlineHelpText>The review stops being displayed to the reviewer at the end of this day.</inlineHelpText>
    <label>Display End Date</label>
    <type>Date</type>
</CustomField>