force-app/main/default/objects/outfunds__Review__c/fields/sfdo_grants__DisplayStartDate__c.field-meta.xml
<CustomField>
    <fullName>sfdo_grants__DisplayStartDate__c</fullName>
    <description>When the review starts being displayed to the reviewer.</description>
    <inlineHelpText>When the review starts being displayed to the reviewer.</inlineHelpText>
    <label>Display Start Date</label>
    <type>Date</type>
</CustomField>