force-app/main/default/objects/outfunds__Review__c/fields/sfdo_grants__IsDisplayed__c.field-meta.xml
<CustomField>
    <fullName>sfdo_grants__IsDisplayed__c</fullName>
    <description>Indicates if the review is available based on the Display Start and End Dates.</description>
    <formula>IF(ISBLANK(sfdo_grants__DisplayStartDate__c) ,  sfdo_grants__DisplayEndDate__c &gt;= TODAY() , AND(sfdo_grants__DisplayStartDate__c &lt;= TODAY(), sfdo_grants__DisplayEndDate__c &gt;= TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Review Displayed</label>
    <type>Checkbox</type>
</CustomField>