force-app/main/default/objects/outfunds__Review__c/fields/sfdo_grants__IsMine__c.field-meta.xml
<CustomField>
    <fullName>sfdo_grants__IsMine__c</fullName>
    <description>Indicates if the review is assigned to the person logged into the portal.</description>
    <formula>$User.Username =  outfunds__AssignedTo__r.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Review</label>
    <type>Checkbox</type>
</CustomField>