force-app/main/default/objects/outfunds__Review__c/fields/sfdo_grants__IsSubmitted__c.field-meta.xml
<CustomField>
    <fullName>sfdo_grants__IsSubmitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the reviewer submitted the review.</description>
    <label>Submitted</label>
    <type>Checkbox</type>
</CustomField>