force-app/main/default/objects/outfunds__Review__c/fields/sfdo_grants__ReviewUrl__c.field-meta.xml
<CustomField>
    <fullName>sfdo_grants__ReviewUrl__c</fullName>
    <description>This field&apos;s formula creates URLs for internal Salesforce reviews and external portal reviews based on the assigned user.</description>
    <formula>IF(
	OR(
		ISPICKVAL(outfunds__AssignedTo__r.UserType, &quot;Partner&quot;),
		ISPICKVAL(outfunds__AssignedTo__r.UserType, &quot;PowerPartner&quot;),
		ISPICKVAL(outfunds__AssignedTo__r.UserType, &quot;CustomerSuccess&quot;),
		ISPICKVAL(outfunds__AssignedTo__r.UserType, &quot;PowerCustomerSuccess&quot;),
		ISPICKVAL(outfunds__AssignedTo__r.UserType, &quot;CspLitPortal&quot;)
	),
	$CustomMetadata.sfdo_grants__GrantsManagementSettings__mdt.sfdo_grants__GlobalFeaturesSettings.sfdo_grants__GrantReviewPortalUrl__c + Id, 
	
	$CustomMetadata.sfdo_grants__GrantsManagementSettings__mdt.sfdo_grants__GlobalFeaturesSettings.sfdo_grants__SalesforceOrgUrl__c + Id
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field&apos;s formula creates URLs for internal Salesforce reviews and external portal reviews based on the assigned user.</inlineHelpText>
    <label>Review URL</label>
    <type>Text</type>
</CustomField>