force-app/main/default/objects/outfunds__Review__c/listViews/outfunds__All.listView-meta.xml
<ListView>
    <fullName>outfunds__All</fullName>
    <columns>NAME</columns>
    <columns>outfunds__Status__c</columns>
    <columns>outfunds__AssignedTo__c</columns>
    <columns>outfunds__DueDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>