force-app/main/default/objects/outfunds__Review__c/listViews/outfunds__OpenReviews.listView-meta.xml
<ListView>
    <fullName>outfunds__OpenReviews</fullName>
    <columns>NAME</columns>
    <columns>outfunds__FundingRequest__c</columns>
    <columns>outfunds__Status__c</columns>
    <columns>outfunds__DueDate__c</columns>
    <columns>outfunds__Comments__c</columns>
    <columns>outfunds__AssignedTo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>outfunds__Status__c</field>
        <operation>notEqual</operation>
        <value>Submitted</value>
    </filters>
    <label>Open Reviews</label>
</ListView>