force-app/main/default/objects/outfunds__Review__c/listViews/sfdo_grants__My_Submitted_Reviews.listView-meta.xml
<ListView>
    <fullName>sfdo_grants__My_Submitted_Reviews</fullName>
    <columns>NAME</columns>
    <columns>outfunds__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>sfdo_grants__IsMine__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>sfdo_grants__IsSubmitted__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>sfdo_grants__IsDisplayed__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Submitted Reviews</label>
</ListView>